Implemented and tested event type end point.
